cmake_minimum_required(VERSION 3.0)

project (DSPFilters CXX)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/source SOURCE_LIB)

option(DSPFILTERS_BUILD_SHARED "Build DSPFilters as a shared library" OFF)

if(DSPFILTERS_BUILD_SHARED)
  set(DSPFILTERS_LIBRARY_TYPE SHARED)
else()
  set(DSPFILTERS_LIBRARY_TYPE STATIC)
endif()

add_library(${PROJECT_NAME} ${DSPFILTERS_LIBRARY_TYPE} ${SOURCE_LIB})

target_include_directories(${PROJECT_NAME} 
PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)

install(TARGETS ${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
  DESTINATION include)

