cmake_minimum_required(VERSION 3.0)

project (DSPFilters CXX)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/source SOURCE_LIB)

option(DSPFILTERS_BUILD_SHARED "Build DSPFilters as a shared library" OFF)

if(DSPFILTERS_BUILD_SHARED)
  set(DSPFILTERS_LIBRARY_TYPE SHARED)
else()
  set(DSPFILTERS_LIBRARY_TYPE STATIC)
endif()

if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
  set(DSPFILTERS_PLATFORM_STRING "windows")
elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
  set(DSPFILTERS_PLATFORM_STRING "linux")
elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
  set(DSPFILTERS_PLATFORM_STRING "macos")
elseif (CMAKE_SYSTEM_NAME STREQUAL "Android")
  set(DSPFILTERS_PLATFORM_STRING "android")
else ()
  message(FATAL_ERROR "Unsupported platform: ${CMAKE_SYSTEM_NAME}")
endif ()

if (CMAKE_SYSTEM_NAME STREQUAL "Android")
  if (DEFINED CMAKE_ANDROID_ARCH_ABI AND NOT CMAKE_ANDROID_ARCH_ABI STREQUAL "")
    set(DSPFILTERS_ARCH_STRING "${CMAKE_ANDROID_ARCH_ABI}")
  elseif (DEFINED ANDROID_ABI AND NOT ANDROID_ABI STREQUAL "")
    set(DSPFILTERS_ARCH_STRING "${ANDROID_ABI}")
  elseif (CMAKE_SIZEOF_VOID_P EQUAL 8)
    set(DSPFILTERS_ARCH_STRING "arm64-v8a")
  else ()
    set(DSPFILTERS_ARCH_STRING "armeabi-v7a")
  endif ()
elseif (CMAKE_SIZEOF_VOID_P EQUAL 8)
  set(DSPFILTERS_ARCH_STRING "x86_64")
else ()
  set(DSPFILTERS_ARCH_STRING "x86")
endif ()

set(DSPFILTERS_OUTPUT_NAME_DEBUG
  "DSPFiltersLib.${DSPFILTERS_PLATFORM_STRING}.template_debug.${DSPFILTERS_ARCH_STRING}")
set(DSPFILTERS_OUTPUT_NAME_RELEASE
  "DSPFiltersLib.${DSPFILTERS_PLATFORM_STRING}.template_release.${DSPFILTERS_ARCH_STRING}")

add_library(${PROJECT_NAME} ${DSPFILTERS_LIBRARY_TYPE} ${SOURCE_LIB})

target_include_directories(${PROJECT_NAME} 
PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
set_target_properties(${PROJECT_NAME} PROPERTIES
  OUTPUT_NAME_DEBUG ${DSPFILTERS_OUTPUT_NAME_DEBUG}
  OUTPUT_NAME_RELEASE ${DSPFILTERS_OUTPUT_NAME_RELEASE}
  ARCHIVE_OUTPUT_NAME_DEBUG ${DSPFILTERS_OUTPUT_NAME_DEBUG}
  ARCHIVE_OUTPUT_NAME_RELEASE ${DSPFILTERS_OUTPUT_NAME_RELEASE}
  LIBRARY_OUTPUT_NAME_DEBUG ${DSPFILTERS_OUTPUT_NAME_DEBUG}
  LIBRARY_OUTPUT_NAME_RELEASE ${DSPFILTERS_OUTPUT_NAME_RELEASE}
  RUNTIME_OUTPUT_NAME_DEBUG ${DSPFILTERS_OUTPUT_NAME_DEBUG}
  RUNTIME_OUTPUT_NAME_RELEASE ${DSPFILTERS_OUTPUT_NAME_RELEASE})

install(TARGETS ${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
  DESTINATION include)

